<!-- activity_second.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataDump">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout0"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"

            android:paddingStart="0dp"

            android:text="@string/setupText"
            android:textColor="@color/accent_0"
            android:textSize="36sp"
            android:fontFamily="@font/venus_cormier"
            android:gravity="center_vertical|start"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="8dp"
        android:paddingEnd="-8dp"

        android:scrollbars="none"
        android:scrollbarStyle="outsideInset"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginEnd= "16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/data_background"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/usernameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="12dp"

                android:fontFamily="@font/venus_cormier"

                android:gravity="center"
                android:text="@string/setupUsernameText"
                android:textColor="@color/accent_1"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:padding="24dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"

                android:autofillHints="@string/setupUsernameHint"
                android:background="@drawable/rounded_edittext_setup"

                android:fontFamily="@font/venus_cormier"
                android:textSize="14sp"
                android:gravity="center"
                android:hint="@string/setupUsernameHint"
                android:inputType="text"

                android:textColor="@color/gray_70"
                android:textColorHint="@color/gray_15"
                android:textCursorDrawable="@drawable/cursor_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/usernameTextView" />

            <TextView
                android:id="@+id/permissionsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:padding="12dp"

                android:fontFamily="@font/venus_cormier"
                android:gravity="center"

                android:text="@string/setupPermissionsText"
                android:textColor="@color/accent_1"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />
            <Button
                android:id="@+id/buttonPermission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:padding="24dp"

                android:backgroundTint="@color/gray_5"
                android:fontFamily="@font/venus_cormier"

                android:radius="@dimen/softCorners"
                android:text="@string/givePermissionsText"
                android:textColor="@color/gray_70"
                android:textSize="14sp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/permissionsTextView" />

            <TextView
                android:id="@+id/audioSavingTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:padding="12dp"

                android:fontFamily="@font/venus_cormier"
                android:gravity="center"
                android:text="@string/setupAudioSavingText"
                android:textColor="@color/accent_1"
                android:textSize="14sp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonPermission" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/audioSaveLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"

                android:background="@drawable/message_background"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/audioSavingTextView">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    
                    android:padding="12dp"

                    android:gravity="start|center_vertical"
                    android:fontFamily="@font/venus_cormier"
                    android:text="@string/settingsAudioSaveText"
                    android:textColor="@color/gray_70"
                    android:textSize="14sp"
                    
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/audioSaveCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"

                    android:checked="false"

                    android:text=""
                    android:textColor="@color/accent_0"
                    android:textSize="14sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/audioSettingsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:padding="12dp"

                android:gravity="center"
                android:text="@string/setupAudioCleaningText"
                android:textColor="@color/accent_1"
                android:textSize="14sp"
                android:fontFamily="@font/venus_cormier"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/audioSaveLayout" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/audioCleanLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"

                android:background="@drawable/message_background"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/audioSettingsTextView">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:fontFamily="@font/venus_cormier"

                    android:gravity="start|center_vertical"
                    android:padding="12dp"
                    android:text="@string/settingsCleanAudioText"
                    android:textColor="@color/gray_70"
                    android:textSize="14sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/cleanAudioCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"

                    android:checked="false"
                    android:text=""
                    android:textColor="@color/accent_0"

                    android:textSize="14sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/audioFilterMusicLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"

                android:background="@drawable/message_background"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/audioCleanLayout">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:fontFamily="@font/venus_cormier"

                    android:gravity="start|center_vertical"
                    android:padding="12dp"
                    android:text="@string/settingsFilterMusicText"
                    android:textColor="@color/gray_70"
                    android:textSize="14sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/filterMusicCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"

                    android:checked="false"
                    android:text=""
                    android:textColor="@color/accent_0"

                    android:textSize="14sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/audioNormalizeLoudnessLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"

                android:background="@drawable/message_background"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/audioFilterMusicLayout">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:fontFamily="@font/venus_cormier"

                    android:gravity="start|center_vertical"
                    android:padding="12dp"
                    android:text="@string/settingsNormalizeLoudnessText"
                    android:textColor="@color/gray_70"
                    android:textSize="14sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/normalizeLoudnessCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"

                    android:checked="false"
                    android:text=""
                    android:textColor="@color/accent_0"

                    android:textSize="14sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/removeSilenceLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"

                android:background="@drawable/message_background"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/audioNormalizeLoudnessLayout">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:fontFamily="@font/venus_cormier"

                    android:gravity="start|center_vertical"
                    android:padding="12dp"
                    android:text="@string/settingsRemoveSilenceText"
                    android:textColor="@color/gray_70"
                    android:textSize="14sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/removeSilenceCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"

                    android:checked="false"
                    android:text=""
                    android:textColor="@color/accent_0"

                    android:textSize="14sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageButton
                android:id="@+id/buttonUpdateAndNext"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/baseline_arrow_back_ios_new_24"
                android:contentDescription="@string/nextButton"
                android:rotation="180"
                android:scaleType="centerCrop"
                android:scaleX="0.7"
                android:scaleY="0.6"
                android:text=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/removeSilenceLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>